# PC-Agent

./: .gitignore  README.md
src/: index.html  main.js  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  settings.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/context/: audio.rs  mod.rs  screen.rs
src/assets/: highlight.min.js  marked.min.js
